<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Phone_Register_Activity">

    <RelativeLayout
        android:id="@+id/enter_mob_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <TextView
            android:id="@+id/Login_Heading"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/Login_page_heading"
            android:textStyle="bold">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/Mobile_Number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/Login_Heading">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Enter_Mobile_Number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>



        <TextView
            android:id="@+id/note"
            style="@style/ShapeAppearance.MaterialComponents.SmallComponent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/Mobile_Number"
            android:text="@string/note">
        </TextView>

        <Button
            android:id="@+id/bt_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="17dp"
            android:layout_below="@+id/note"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="#5E5CB2"
            android:text="@string/Continue"
            android:textColor="#fff">
        </Button>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/enter_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">


        <TextView
            android:id="@+id/Login_Heading_2"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25sp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="5sp"
            android:text="@string/Login_page_heading_2"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#000">

        </TextView>

        <TextView
            android:id="@+id/note_2"
            style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25sp"
            android:layout_marginEnd="5sp"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="15dp"
            android:layout_below="@id/Login_Heading_2"
            android:text="@string/note_2"
            android:textSize="16sp">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/otp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/note_2"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/otp_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="otp code">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>



        <TextView
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/otp"
            android:layout_marginStart="25sp"
            android:layout_marginTop="10dp"
            android:text="Haven't received a code? Resend">
        </TextView>

    </RelativeLayout>



</RelativeLayout>